# autoresearch-local

./: README.md  program.md  pyproject.toml
src/autoresearch_local/: __init__.py  backends.py  cli.py  profiles.py  prompts.py  system.py  tuning.py
tests/: test_backends.py  test_profiles.py  test_system.py  test_tuning.py
tests/data/: llama_cli_output.txt
