[project]
name = "autoresearch-local"
version = "0.1.0"
description = "Apple Silicon GGUF tuning and serving on top of llama.cpp and Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.67.0",
]

[project.scripts]
autoresearch-local = "autoresearch_local.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
